--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,23 +4,22 @@ on:
     branches:
       - main
     paths:
-      - '**.js'
-      - '**.ts'
-      - '**.vue'
-      - 'package-lock.json'
-      - '.github/workflows/lint.yml'
+      - "**.js"
+      - "**.ts"
+      - "**.tsx"
+      - "package-lock.json"
+      - ".github/workflows/lint.yml"
   pull_request:
     paths:
-      - '**.js'
-      - '**.ts'
-      - '**.vue'
-      - 'package-lock.json'
-      - '.github/workflows/lint.yml'
-
+      - "**.js"
+      - "**.ts"
+      - "**.tsx"
+      - "package-lock.json"
+      - ".github/workflows/lint.yml"
 
 defaults:
   run:
-    shell: 'bash'
+    shell: "bash"
 
 jobs:
   eslint:
@@ -31,7 +30,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16 # Need for npm >=7.7
-          cache: 'npm'
+          cache: "npm"
 
       # TODO: Install not all dependencies, but only those required for this workflow
       - name: Install dependencies
