--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,25 +4,22 @@ on:
     branches:
       - main
     paths-ignore:
-      - '**.md'
-      - '**.spec.js'
-      - '.idea'
-      - '.gitignore'
-      - '.github/**'
-      - '!.github/workflows/release.yml'
+      - "**.md"
+      - "**.spec.js"
+      - ".idea"
+      - ".gitignore"
+      - ".github/**"
+      - "!.github/workflows/release.yml"
 
 concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: true
 
-
 defaults:
   run:
-    shell: 'bash'
-
+    shell: "bash"
 
 jobs:
-
   draft:
     runs-on: ubuntu-latest
     outputs:
@@ -54,13 +51,12 @@ jobs:
         id: version
         run: echo "::set-output name=current-version::$(node -e "try{console.log(require('./electron-builder.config.js').extraMetadata.version)}catch(e){console.error(e);process.exit(1)}")"
 
-
       - name: Waiting on All checks
         uses: lewagon/wait-on-check-action@v0.2
         with:
           ref: ${{ github.ref }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          running-workflow-name: 'draft'
+          running-workflow-name: "draft"
 
       - name: Delete outdated drafts
         uses: hugo19941994/delete-draft-releases@v0.1.0
@@ -79,11 +75,11 @@ jobs:
           body: ${{ steps.release-note.outputs.release-note }}
 
   upload_artifacts:
-    needs: [ draft ]
+    needs: [draft]
 
     strategy:
       matrix:
-        os: [ windows-latest ]
+        os: [windows-latest]
     #    To compile the application for different platforms, use:
     #    os: [ macos-latest, ubuntu-latest, windows-latest ]
 
@@ -95,7 +91,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16 # Need for npm >=7.7
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -125,7 +121,6 @@ jobs:
           # Sometimes the build may fail due to a connection problem with Apple, GitHub, etc. servers.
           # This option will restart the build as many attempts as possible
           max_attempts: 3
-
 
           # Code Signing params
 
