--- a/.github/workflows/typechecking.yml
+++ b/.github/workflows/typechecking.yml
@@ -4,22 +4,22 @@ on:
     branches:
       - main
     paths:
-      - '**.ts'
-      - '**.vue'
-      - '**/tsconfig.json'
-      - 'package-lock.json'
-      - '.github/workflows/typechecking.yml'
+      - "**.ts"
+      - "**.tsx"
+      - "**/tsconfig.json"
+      - "package-lock.json"
+      - ".github/workflows/typechecking.yml"
   pull_request:
     paths:
-      - '**.ts'
-      - '**.vue'
-      - '**/tsconfig.json'
-      - 'package-lock.json'
-      - '.github/workflows/typechecking.yml'
+      - "**.ts"
+      - "**.tsx"
+      - "**/tsconfig.json"
+      - "package-lock.json"
+      - ".github/workflows/typechecking.yml"
 
 defaults:
   run:
-    shell: 'bash'
+    shell: "bash"
 
 jobs:
   typescript:
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16 # Need for npm >=7.7
-          cache: 'npm'
+          cache: "npm"
 
       # TODO: Install not all dependencies, but only those required for this workflow
       - name: Install dependencies
