--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "vite-electron-builder",
   "private": true,
-  "engines": {
-    "node": ">=v14.16",
-    "npm": ">=7.7"
-  },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
     "buildEnvTypes": "node scripts/buildEnvTypes.js",
@@ -14,43 +10,50 @@
     "pretest": "cross-env MODE=test npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
+    "lint": "eslint . --ext js,ts,tsx",
+    "format": "prettier --write .",
     "pretypecheck": "npm run buildEnvTypes",
+    "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
     "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
-    "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer"
+    "typecheck-renderer": "tsc --noEmit -p packages/renderer/tsconfig.json"
   },
-  "browserslist": [
-    "Chrome 91"
-  ],
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged",
     "pre-push": "npm run typecheck"
   },
   "lint-staged": {
-    "*.{js,ts,vue}": "eslint --cache --fix"
+    "*.{js,ts,tsx}": "eslint --cache --fix"
+  },
+  "browserslist": [
+    "Chrome 91"
+  ],
+  "dependencies": {
+    "electron-updater": "^4.4.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@vitejs/plugin-vue": "^1.2.5",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "cross-env": "^7.0.3",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.31.0",
-    "eslint-plugin-vue": "^7.14.0",
     "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
+    "prettier-plugin-packagejson": "^2.2.11",
     "simple-git-hooks": "^2.5.1",
     "spectron": "^15.0.0",
     "typescript": "^4.3.5",
-    "vite": "^2.4.2",
-    "vue-tsc": "^0.2.1"
+    "vite": "^2.4.2"
   },
-  "dependencies": {
-    "electron-updater": "^4.4.1",
-    "vue": "^3.1.2",
-    "vue-router": "^4.0.10"
+  "engines": {
+    "node": ">=v14.16",
+    "npm": ">=7.7"
   }
 }
