--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
   ],
   "dependencies": {
     "electron-updater": "^4.4.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "framer-motion": "^4.1.17",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.5",
     "cross-env": "^7.0.3",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
