--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "sourceMap": true,
     "moduleResolution": "Node",
     "skipLibCheck": true,
-    "strict": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": false,
@@ -15,6 +14,21 @@
     "jsx": "react",
     "types": ["vite/client", "node"],
     "typeRoots": ["node_modules/@types"],
-    "lib": ["ESNext"]
+    "lib": ["ESNext"],
+    "strict": true,
+    "alwaysStrict": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "useUnknownInCatchVariables": true,
+    // unused - can be in eslint too
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+
   }
 }
