remove ts option that can be achieved by @typescript-eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,6 @@
     "noImplicitThis": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
-    "useUnknownInCatchVariables": true,
-    // unused - can be in eslint too
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
+    "useUnknownInCatchVariables": true
   }
 }
