--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.31.0",
     "lint-staged": "^11.0.1",
+    "modern-css-reset": "^1.4.0",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
     "simple-git-hooks": "^2.5.1",
     "spectron": "^15.0.0",
     "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^2.4.2"
   },
   "engines": {
