--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "Chrome 91"
   ],
   "dependencies": {
+    "electron-debug": "^3.2.0",
     "electron-updater": "^4.4.1",
     "framer-motion": "^4.1.17",
+    "modern-css-reset": "^1.4.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "type-fest": "^0.21.3"
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
@@ -46,7 +49,6 @@
     "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.31.0",
     "lint-staged": "^11.0.1",
-    "modern-css-reset": "^1.4.0",
     "prettier": "^2.3.2",
     "prettier-plugin-packagejson": "^2.2.11",
     "simple-git-hooks": "^2.5.1",
