comment out ts4.4 options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "lib": ["ESNext"],
     "strict": true,
     "alwaysStrict": true,
-    "exactOptionalPropertyTypes": true,
+//    "exactOptionalPropertyTypes": true, TS 4.4
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitOverride": true,
@@ -25,7 +25,7 @@
     "noImplicitThis": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
-    "useUnknownInCatchVariables": true,
+//    "useUnknownInCatchVariables": true, TS 4.4
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
