move typescript-plugin-css-modules to the renderer folder

--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -14,5 +14,7 @@
     "types/**/*.d.ts",
     "../../types/**/*.d.ts",
     "../preload/types/electron-api.d.ts"
-  ]
+  ],
+
+  "plugins": [{ "name": "typescript-plugin-css-modules" }]
 }
