move electron-api.ts

--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -6,6 +6,6 @@
       "/@/*": ["./src/*"]
     }
   },
-  "files": ["electron-api.d.ts", "src/index.ts"],
+  "files": ["types/electron-api.ts", "src/index.ts"],
   "include": ["../../types/**/*.d.ts"]
 }
