--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -13,7 +13,7 @@
     "src/**/*.tsx",
     "types/**/*.d.ts",
     "../../types/**/*.d.ts",
-    "../preload/types/electron-api.d.ts"
+    "../preload/types/electron-api.ts"
   ],
 
   "plugins": [{ "name": "typescript-plugin-css-modules" }]
